--- a/templates/home.html
+++ b/templates/home.html
@@ -62,7 +62,7 @@
             <div class="container px-5 py-24 mx-auto">
                 <div class="flex flex-col text-center w-full mb-12">
                     <h1 class="sm:text-7xl text-2xl font-medium mb-4 text-gray-900">ocr</h1>
-                    <p class="lg:w-2/3 mx-auto leading-relaxed text-xl">optical character recognition</p>
+                    <p class="lg:w-2/3 mx-auto leading-relaxed text-xl">optical character recognition for english, chinese, and chinglish</p>
                 </div>
 
                 <div class="container">
