text to braille

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -182,7 +182,8 @@ textarea {
     line-height: inherit;
     color: inherit;
     margin: 0;
-    padding: 0
+    padding: 0;
+    float: right;
 }
 
 button,
