--- a/templates/home.html
+++ b/templates/home.html
@@ -106,7 +106,7 @@
                     
                     <!-- <p id="ocrtext" class="text-lg mt-2  mb-8">{{ ocr }}</p>    -->
 
-                    <pre id="ocrtext" class="text-lg mt-2  mb-8 text-center">{{ ocr }}</pre>
+                    <pre id="ocrtext" class="text-lg mt-2  mb-8 text-left">{{ ocr }}</pre>
 
                     <a type="submit" class="custom-btn shadow-md bg-white" href="#ttb" id="braille" onclick="braille()">Get Braille</a>               
                     </div> 
